# bank-for-fun

./: .editorconfig  .env.example  .gitattributes  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
core-bank/: .dockerignore  Dockerfile  build.gradle.kts  settings.gradle.kts
core-bank/src/main/resources/: application.yml
docs/: TESTING.md
docs/adr/: 0000-template.md  0001-modular-monolith.md  0002-money-representation.md  0003-mvc-virtual-threads.md  0004-pessimistic-locking.md  0005-idempotency-strategy.md  0006-keycloak-auth.md  0007-fraud-service-python.md  0009-tracing-agent.md  0010-frontend-bff.md  README.md
docs/plan/: IMPLEMENTATION_PLAN (1).md
fraud-service/: .dockerignore  Dockerfile  pyproject.toml
fraud-service/app/: main.py  scoring.py
fraud-service/tests/: test_api.py  test_scoring.py
frontend/: package-lock.json  package.json
frontend/src/: auth.ts  proxy.ts
frontend/src/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/app/(app)/: layout.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/: providers.tsx
frontend/src/lib/: api.ts  format.ts  insights.ts  labels.ts  queries.ts  schemas.ts  trend.ts
frontend/src/types/: next-auth.d.ts
infra/: e2e-smoke.sh  seed-history.sql  seed.sh
infra/keycloak/: realm-export.json
infra/observability/prometheus/: prometheus.yml
infra/observability/promtail/: promtail-config.yml
infra/observability/tempo/: tempo.yml
infra/postman/: ledger-bank.postman_collection.json
(+183 files in other folders)
